--- a/customviews/build.gradle
+++ b/customviews/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.interactivitycommunication"
+        applicationId "com.example.customviews"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -23,10 +23,6 @@ android {
         }
     }
 
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
-    }
 }
 
 dependencies {
